--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body {
 }
 
 #welcome-section {
-  height: 100vh;
-  width: 100%;
+  height: 100%;
   background: rgb(2, 0, 36);
   background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 50%, rgba(0, 212, 255, 1) 100%);
   display: flex;
@@ -54,6 +53,8 @@ body {
 .contacts {
   display: flex;
   flex-direction: column;
+  margin-bottom: 200px;
+  margin-top: 200px;
   position: fixed;
   margin-left: 95%;
 }
@@ -65,6 +66,8 @@ body {
 #titleName {
   color: white;
   margin-left: 10%;
+  margin-bottom: 200px;
+  margin-top: 200px;
 }
 
 #titleName a {
@@ -104,16 +107,14 @@ body {
 }
 
 #profile img {
-  margin-left: 80px;
   max-width: 300px;
   border-radius: 150px;
-  width: 100%;
+  margin-left: 80px;
 }
 
 #projects {
   background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 50%, rgba(0, 212, 255, 1) 100%);
-  width: 100%;
-  height: 100vh text-align: center;
+  text-align: center;
   display: flex;
   justify-content: center;
 }
