--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ body {
   margin-bottom: 200px;
   margin-top: 200px;
   position: fixed;
-  margin-left: 95%;
+  margin-left: 92%;
+  z-index: 1;
 }
 
 .contacts img {
