--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
 #about {
   display: flex;
   justify-content: space-around;
-  padding: 80px;
+  padding:80px 80px 0px 80px;
   background: black;
 }
 
