css padding projects

--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ body {
 #projects {
   background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 50%, rgba(0, 212, 255, 1) 100%);
   text-align: center;
-  justify-content: center;
+  padding:80px;
 }
 
 #projects h2 {
