--- a/style.css
+++ b/style.css
@@ -52,6 +52,11 @@ body {
   max-width: 50px;
 }
 
+#java {
+  max-width: 50px;
+  background: white;
+}
+
 .contacts {
   display: flex;
   flex-direction: column;
@@ -122,7 +127,7 @@ body {
 #projects {
   background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 50%, rgba(0, 212, 255, 1) 100%);
   text-align: center;
-  padding:80px;
+  padding: 80px;
 }
 
 #projects h2 {
@@ -168,4 +173,98 @@ footer {
 
 #contact a {
   text-decoration: none;
+}
+
+div.panel {
+  width: 100px;
+  padding: 5px;
+  text-align: center;
+  background: white;
+  border: solid 1px #c3c3c3;
+  position: fixed;
+  right: 10px;
+  bottom: -15px;
+  z-index: 1;
+}
+
+.flip {
+  width: 70px;
+  padding: 5px;
+  text-align: center;
+  position: fixed;
+  right: 25px;
+  bottom: 0px;
+  z-index: 1;
+}
+
+div.panel {
+  position: fixed;
+  bottom: 29px;
+  width: 300px;
+  height: 220px;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: left;
+  border-radius: 20px;
+  font-size: 14px;
+}
+
+.chatUser {
+  width: 100%;
+  border-top: solid 1px;
+}
+
+.chatInput {
+  width: 100%;
+  height: 25px;
+  border: none;
+}
+
+.chatInput:focus-visible {
+  box-shadow: 0 0 0 0;
+  outline: 0;
+}
+
+.exit {
+  width: 15px;
+  height: 15px;
+  position: relative;
+  left: 260px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.robotWelcome {
+  overflow: hidden;
+  animation: welcomeRobot 2s steps(40) 1s normal both;
+  white-space: nowrap;
+  font-size: xx-small;
+}
+
+@keyframes welcomeRobot {
+  from {
+    width: 0
+  }
+
+  to {
+    width: 16em
+  }
+}
+
+.robotAnswer {
+  overflow: hidden;
+  animation: answerRobot 2s steps(40) 1s normal both;
+  white-space: nowrap;
+  font-size: xx-small;
+}
+
+@keyframes answerRobot{
+  from {
+    width: 0
+  }
+
+  to {
+    width: 100%
+  }
 }
